--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/javascript/script.js"></script>
   <link rel="stylsheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assests/css/style.css">
   <title>Employee Tracker</title>
 </head>
 
@@ -55,7 +51,7 @@
 
               </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button id="submit" class="btn btn-primary">Submit</button>
             </form>
 
           </div>
@@ -93,8 +89,10 @@
 
 
 
-
-  <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script> 
+  <script src="assests/javascript/script.js"></script>
+  
 
 </body>
 
